@@ -1,0 +1,4 @@
+in: 3 4 5 6 7 8 9
+a = 3
+7
+out: 3 4 6 6 8 8 9
